<resources>

    <string name="app_name">EarTune</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">EarTune - Prototipo</string>

    <!-- Musical Notes -->
    <string name="note_do">DO</string>
    <string name="note_re">RE</string>
    <string name="note_mi">MI</string>
    <string name="note_fa">FA</string>
    <string name="note_sol">SOL</string>
    <string name="note_la">LA</string>
    <string name="note_si">SI</string>
    <string name="notas">Notas</string>
    <string name="play">Jogar</string>
    <string name="hear">Escutar</string>
    <string name="ok">OK</string>

    <!-- Fragment Training -->
    <string name="difficult">Dificuldade:</string>
    <string name="record">Record:</string>
    <string name="name">Name name name</string>
    <string name="miss">Erros:</string>
    <string name="hit">Percentual de habilidade %:</string>
    <string name="score">Score</string>
    <string name="time">Tempo</string>
    <string name="start_training">Treinar</string>
    <string name="ear">Ouvido</string>

    <!-- Score -->
    <string name="hits">Acertos</string>
    <string name="misses">Erros</string>
    <string name="time">Tempo</string>

</resources>