<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_prototype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notas"
        android:textSize="24dp" />

    <Button
        android:id="@+id/button_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_do" />

    <Button
        android:id="@+id/button_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_re" />

    <Button
        android:id="@+id/button_mi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_mi" />

    <Button
        android:id="@+id/button_fa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_fa" />

    <Button
        android:id="@+id/button_sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_sol" />

    <Button
        android:id="@+id/button_la"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_la" />

    <Button
        android:id="@+id/button_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_si" />

</LinearLayout>